--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,10 @@ body{
   color: #333456;
 }
 
+/* max width 100% taaki img overflow na ho */
 .group-image{
   max-width: 100%;
+
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -96,13 +98,13 @@ footer{
 
 @media only screen and (max-width: 992px){
   .group-image{
-    height:70vh;
+    height:50vh;
   }
   .content{
     padding-bottom: 2rem;
   }
   .content-heading{
-    font-size: 6rem;
+    font-size: 10rem;
   }
   .content-paragraph{
     font-size: 1.3rem;
